# minimap2

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  FAQ.md  LICENSE.txt  MANIFEST.in  Makefile  Makefile.simde  NEWS.md  README.md  a.txt  a6000_config.json  aac_config.json  align.c  bseq.c  bseq.h  build_rmi.sh  chain.c  code_of_conduct.md  cookbook.md  esterr.c  example.c  format.c  getopt.c  getopt.h  gettimeofday.h  gfx1030.json  gpu_config.json  gtx1030.json  hit.c  index.c  index.md  jump.c  kalloc.c  kalloc.h  kdq.h  ketopt.h  khash.h  krmq.h  (+47 more)
.github/workflows/: ci.yaml  python.yml
gpu/: .depend  a6000_config.json  debug.c  debug.h  gfx1030_config.json  gpu.mk  gpu_config.json  hipify.cuh  mi210_below50k_config.json  orin32GB.json  planalyze.cu  planalyze.cuh  plchain.cu  plchain.h  plmem.cu  plmem.cuh  plrange.cu  plrange.cuh  plscore.cu  plscore.cuh  plutils.h
misc/: README.md  cnt-feat.js  exon-eval.js  gff2bed.js  intron-eval.js  k8-0.2.4.tar.bz2  mapstat.js  mmphase.js  ov-eval.js  paf2aln.js  paf2diff.js  paf2ovlp.js  pafcluster.js  paftools.js  pbsim-eval.js  sam2paf.js  sim-eval.js  sim-mason2.js  sim-pbsim.js  splice2bed.js  utec.js
misc/k8-0.2.4/: README.md  k8.cc  k8.js
python/: README.md  README.rst  cmappy.h  cmappy.pxd  cminimap2.h  cminimap2.pxd  cmmappy.h  cmmappy.pxd  mappy.pyx  minimap2.py  minimap2.pyx  mm2-lite.py  mmappy.pyx
scripts/: aac_integrated.sh  aac_omniperf.slurm  aac_omnitrace.slurm  aac_rocprof.slurm  aac_timing_all.sh  acc_integrated.slurm  amdxfx_integrated.sh  compare_mem.py  data_analysis.ipynb  mbit10_integrated.sh  ncu_all.sh  ncu_integrated.sh  nvprof_all.sh  parse_seg.py  run_ncu_profile.sh  test_index.cpp
sse2neon/: emmintrin.h
test/: MT-orang.fa  q-inv.fa  q2.fa  t-inv.fa  t2.fa  test.sh  x3s-aln.txt  x3s-qry.fa  x3s-ref.fa
tex/: Makefile  aln-dp.tex  bioinfo.cls  blasr-mc.eval  bowtie2-s3.sam.eval  bwa-s3.sam.eval  bwa.eval  eval2roc.pl  graphmap.eval  hs38-simu.sh  minialign.eval  minimap2.bib  minimap2.tex  mm2-s3.sam.eval  mm2-update.tex  mm2.approx.eval  mm2.eval  natbib.sty  ngmlr.eval  roc.gp  snap-s3.sam.eval
